--- a/style.css
+++ b/style.css
@@ -17,16 +17,12 @@ body {
 }
 
 main {
-  width: 30vw;
-  height: 55vh;
+  width: 40vw;
+  height: fit-content;
   padding: 2.5rem;
   border-radius: 35px;
   background-color: hsl(213, 19%, 18%);
 }
-
-/* .main {
-  display: none;
-} */
 
 .main .icon {
   width: fit-content;
@@ -45,11 +41,12 @@ main {
 }
 
 h1 {
+  font-size: 2.4rem;
   margin-bottom: 0.6rem;
 }
 
 p {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   margin-bottom: 2rem;
 }
 
@@ -138,4 +135,22 @@ form {
 
 .hidden {
   display: none;
+}
+
+@media (max-width: 950px) {
+  main {
+    width: 75vw;
+  }
+}
+
+@media (max-width: 550px) {
+  main {
+    width: 90vw;
+    padding: 1.5rem;
+  }
+
+  .btns span {
+    height: 3rem;
+    width: 3rem;
+  }
 }
